test: add vitest and fix table `append` and `empty` slot

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,14 @@
     "isolatedModules": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "types": ["node", "vite/client"],
+    "types": ["node", "vite/client", "vitest/globals"],
   },
   "include": [
     "packages/**/**/*",
     "packages/**/*",
     "vite.config.ts",
-    "volar.d.ts"
+    "__tests__/*",
+    "volar.d.ts",
   ],
   "exclude": ["node_modules", "dist"]
 }
