--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
   "sideEffects": false,
   "scripts": {
     "dev": "vite",
+    "test": "vitest run",
     "build": "vite build",
     "preview": "vite preview",
     "lib": "vite build && vue-tsc -p tsconfig.build.json",
-    "lint": "prettier --write  \"packages/**/*.{ts,tsx}\"",
+    "lint": "prettier --write  \"packages/**/*.{ts,tsx}\" \"__tests__/table.test.tsx\"",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
     "lint:pretty": "pretty-quick --staged",
     "prepare": "husky install"
@@ -62,13 +63,17 @@
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@vue/test-utils": "^2.0.0",
     "husky": "^8.0.1",
+    "jsdom": "^20.0.0",
     "lint-staged": "^13.0.2",
     "prettier": "^2.7.1",
+    "resize-observer-polyfill": "^1.5.1",
     "rollup": "^2.75.7",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.7.4",
     "vite": "^2.9.12",
+    "vitest": "^0.16.0",
     "vue-tsc": "^0.38.1"
   }
 }
