--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.7.4",
     "vite": "^2.9.12",
+    "vite-svg-loader": "^3.4.0",
     "vitest": "^0.16.0",
     "vue-tsc": "^0.38.1"
   }
