feat: add `i18n` in `demo`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
   "include": [
     "packages/**/**/*",
     "packages/**/*",
+    "src/*.ts",
+    "src/*.tsx",
+    "src/*.vue",
     "vite.config.ts",
     "__tests__/*",
     "volar.d.ts",
