--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lib": "vite build && vue-tsc -p tsconfig.build.json",
-    "lint": "prettier --write  \"packages/**/*.{ts,tsx}\" \"__tests__/table.test.tsx\"",
+    "lint": "prettier --write  \"packages/**/*.{ts,tsx}\" \"__tests__/table.test.tsx\" \"src/*.{ts,tsx,vue}\"",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
     "lint:pretty": "pretty-quick --staged",
     "prepare": "husky install"
@@ -67,9 +67,10 @@
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@esbuild-kit/cjs-loader": "^2.2.0",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.0",
     "@types/node": "^18.0.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@vitejs/plugin-vue-jsx": "^2.0.0",
     "@vue/test-utils": "^2.0.0",
     "husky": "^8.0.1",
     "jsdom": "^20.0.0",
@@ -81,9 +82,10 @@
     "sass": "^1.54.3",
     "sass-loader": "^13.0.2",
     "typescript": "^4.7.4",
-    "vite": "^2.9.12",
+    "vite": "^3.0.5",
     "vite-svg-loader": "^3.4.0",
-    "vitest": "^0.16.0",
-    "vue-tsc": "^0.38.1"
+    "vitest": "^0.21.1",
+    "vue-i18n": "^9.2.2",
+    "vue-tsc": "^0.39.5"
   }
 }
