--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "test": "vitest run",
     "build": "vite build",
     "preview": "vite preview",
-    "lib": "vue-tsc -p tsconfig.build.json && vite build",
+    "lib": "vite build && vue-tsc -p tsconfig.build.json",
     "lint": "prettier --write  \"packages/**/*.{ts,tsx}\" \"__tests__/table.test.tsx\" \"src/*.{ts,tsx,vue}\"",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
     "lint:pretty": "pretty-quick --staged",
