--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   "jsdelivr": "dist/index.umd.js",
   "exports": {
     ".": {
-      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.es.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.umd.js"
     }
   },
   "files": [
