--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lint": "prettier --write  \"packages/**/*.{ts,tsx}\" \"__tests__/table.test.tsx\" \"src/*.{ts,tsx,vue}\"",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
     "lint:pretty": "pretty-quick --staged",
+    "pub": "pub lib",
     "prepare": "husky install"
   },
   "peerDependencies": {
@@ -64,6 +65,7 @@
     "@commitlint/config-conventional": "^17.0.2",
     "@esbuild-kit/cjs-loader": "^2.2.0",
     "@intlify/vite-plugin-vue-i18n": "^6.0.0",
+    "@pureadmin/release": "^0.0.3",
     "@pureadmin/utils": "^1.8.2",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^3.2.0",
