--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.es.js",
       "require": "./dist/index.umd.js"
+    },
+    "./volar": {
+      "types": "./volar.d.ts"
     }
   },
   "files": [
