--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
+    "target": "ESNext",
     "module": "ESNext",
     "jsx": "preserve",
-    "lib": ["DOM", "ESNext"],
+    "moduleResolution": "bundler",
+    "lib": [
+      "DOM",
+      "ESNext"
+    ],
     "skipLibCheck": true,
     "isolatedModules": true,
-    "moduleResolution": "node",
     "resolveJsonModule": true,
-    "types": ["node", "vite/client", "vitest/globals"],
+    "types": [
+      "node",
+      "vite/client",
+      "vitest/globals"
+    ],
   },
   "include": [
     "packages/**/**/*",
@@ -20,5 +27,8 @@
     "__tests__/*",
     "volar.d.ts",
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
