--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "@pureadmin/table",
   "version": "2.4.1",
   "packageManager": "pnpm@8.6.10",
-  "description": "Use tsx syntax to encapsulate element-plus Table twice to provide flexible configuration items",
+  "description": "二次封装element-plus的Table，提供灵活的配置项",
   "keywords": [
     "@pureadmin/table",
     "element-plus",
     "typescript",
+    "el-table",
+    "nuxt3",
     "vue3",
     "vite",
     "tsx"
@@ -27,8 +29,8 @@
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
-  "unpkg": "dist/index.umd.js",
   "jsdelivr": "dist/index.umd.js",
+  "unpkg": "dist/index.umd.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -64,31 +66,31 @@
     "vue": "^3.3.13"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.2",
-    "@commitlint/config-conventional": "^17.0.2",
-    "@esbuild-kit/cjs-loader": "^2.4.4",
-    "@intlify/unplugin-vue-i18n": "^1.5.0",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@commitlint/types": "^18.4.3",
+    "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@pureadmin/release": "^1.0.0",
     "@pureadmin/utils": "^2.0.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@types/node": "^18.0.0",
+    "@types/node": "^20.10.5",
     "@vitejs/plugin-vue": "^4.4.1",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
-    "@vue/test-utils": "^2.4.1",
-    "husky": "^8.0.1",
-    "jsdom": "^22.1.0",
-    "lint-staged": "^13.0.2",
-    "prettier": "^2.7.1",
+    "@vue/test-utils": "^2.4.3",
+    "husky": "^8.0.3",
+    "jsdom": "^23.0.1",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1",
     "resize-observer-polyfill": "^1.5.1",
     "rollup": "^4.3.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
-    "typescript": "^5.2.2",
-    "vite": "4.5.0",
-    "vite-svg-loader": "^4.0.0",
-    "vitest": "^0.34.6",
-    "vue-i18n": "^9.6.5",
-    "vue-tsc": "^1.8.22"
+    "typescript": "^5.3.3",
+    "vite": "4.5.1",
+    "vite-svg-loader": "^5.1.0",
+    "vitest": "^1.1.0",
+    "vue-i18n": "^9.8.0",
+    "vue-tsc": "^1.8.26"
   },
   "pnpm": {
     "peerDependencyRules": {
