--- a/playgrounds/whole-import-demo/package.json
+++ b/playgrounds/whole-import-demo/package.json
@@ -1,21 +1,22 @@
 {
   "name": "whole-import-demo",
   "version": "2.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "serve": "vite",
     "preview": "vite build && vite preview"
   },
   "dependencies": {
-    "@pureadmin/table": "^2.0.0",
-    "element-plus": "^2.2.28",
-    "vue": "^3.2.45"
+    "@pureadmin/table": "^2.4.2",
+    "element-plus": "^2.4.4",
+    "vue": "^3.3.13"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "sass": "^1.57.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4"
+    "@types/node": "^20.10.5",
+    "@vitejs/plugin-vue": "^5.0.0",
+    "sass": "^1.69.5",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10"
   }
 }
