--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "typescript": "^5.3.3",
     "vite": "4.5.1",
     "vite-svg-loader": "^5.1.0",
-    "vitest": "^1.1.0",
+    "vitest": "0.34.6",
     "vue-i18n": "^9.8.0",
     "vue-tsc": "^1.8.26"
   },
