feat: 添加自定义命名空间示例

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "types": [
       "node",
       "vite/client",
-      "vitest/globals"
+      "vitest/globals",
+      "element-plus/global"
     ],
   },
   "include": [
